# customer-analytics-pipeline-airflow

./: .gitignore  README.md  pyproject.toml
airflow/: airflow.db-shm  airflow.db-wal
airflow/dags/customer_data_platform/dags/: customer_analytics_pipeline.py
scripts/: activate.sh  start.sh
src/customer_data_platform/: extract.py  load.py  paths.py  transform.py  validate.py
src/customer_data_platform/ml/: evaluate.py  features.py  report.py  tracking.py  train.py
